# aspnet-api/src/Api/Contracts/Requests/Pedidos/CreatePedidoRequest.cs
@@ -5,10 +5,6 @@ namespace aspnet_api.Api.Contracts.Requests.Pedidos;
 
 public sealed record CreatePedidoRequest
 {
-    public long ClienteId { get; init; }
-
-    public long CarrinhoId { get; init; }
-
     public EnderecoRequest EnderecoEntrega { get; init; } = new();
 
     public FormaPagamento FormaPagamento { get; init; }
@@ -17,5 +13,3 @@ public sealed record CreatePedidoRequest
 
     public List<PedidoItemRequest> Items { get; init; } = [];
 }
-
-
