# openapi.yaml
@@ -1153,18 +1153,6 @@ components:
     CreatePedidoRequest:
       type: object
       properties:
-        clienteId:
-          pattern: "^-?(?:0|[1-9]\\d*)$"
-          type:
-          - integer
-          - string
-          format: int64
-        carrinhoId:
-          pattern: "^-?(?:0|[1-9]\\d*)$"
-          type:
-          - integer
-          - string
-          format: int64
         enderecoEntrega:
           "$ref": "#/components/schemas/EnderecoRequest"
         formaPagamento:
